website/_versioned_docs/version-0.18/embedded-app-ios.md
---
id: version-0.18-embedded-app-ios
original_id: embedded-app-ios
title: embedded-app-ios
---
<a id="content"></a><h1>Integrating with Existing Apps</h1><div><p>Since React makes no assumptions about the rest of your technology stack – it’s commonly noted as simply the <code>V</code> in <code>MVC</code> – it’s easily embeddable within an existing non-React Native app. In fact, it integrates with other best practice community tools like <a href="http://cocoapods.org/" target="_blank">CocoaPods</a>.</p><h2><a class="anchor" name="requirements"></a>Requirements <a class="hash-link" href="#requirements">#</a></h2><ul><li><a href="http://cocoapods.org/" target="_blank">CocoaPods</a> – <code>gem install cocoapods</code></li><li><a href="http://nodejs.org" target="_blank">Node.js</a><ul><li>Install <strong>nvm</strong> with <a href="https://github.com/creationix/nvm#installation" target="_blank">its setup instructions here</a>. Then run <code>nvm install node &amp;&amp; nvm alias default node</code>, which installs the latest version of Node.js and sets up your terminal so you can run it by typing <code>node</code>.  With nvm you can install multiple versions of Node.js and easily switch between them.</li><li>If you are using Node 5.0 or newer, we recommend installing npm 2, which is much faster than npm 3. After installing Node, run <code>npm install -g npm@2</code></li></ul></li><li>Install the <code>react-native</code> package from npm by running the following command in the root directory of your project:<ul><li><code>npm install react-native</code></li></ul></li></ul><p>At this point you should have the React Native package installed under a directory named <code>node_modules</code> as a sibling to your <code>.xcodeproj</code> file.</p><h2><a class="anchor" name="install-react-native-using-cocoapods"></a>Install React Native Using CocoaPods <a class="hash-link" href="#install-react-native-using-cocoapods">#</a></h2><p><a href="http://cocoapods.org/" target="_blank">CocoaPods</a> is a package management tool for iOS/Mac development. We need to use it to download React Native. If you haven't installed CocoaPods yet, check out <a href="http://guides.cocoapods.org/using/getting-started.html" target="_blank">this tutorial</a>.</p><p>When you are ready to work with CocoaPods, add the following lines to <code>Podfile</code>. If you don't have one, then create it under the root directory of your project.</p><div class="prism language-javascript"># Depending on how your project is organized<span class="token punctuation">,</span> your node_modules directory may be
# somewhere <span class="token keyword">else</span><span class="token punctuation">;</span> tell CocoaPods where you've installed react<span class="token operator">-</span>native from npm
pod <span class="token string">'React'</span><span class="token punctuation">,</span> <span class="token punctuation">:</span>path <span class="token operator">=</span><span class="token operator">&gt;</span> <span class="token string">'./node_modules/react-native'</span><span class="token punctuation">,</span> <span class="token punctuation">:</span>subspecs <span class="token operator">=</span><span class="token operator">&gt;</span> <span class="token punctuation">[</span>
  <span class="token string">'Core'</span><span class="token punctuation">,</span>
  <span class="token string">'RCTImage'</span><span class="token punctuation">,</span>
  <span class="token string">'RCTNetwork'</span><span class="token punctuation">,</span>
  <span class="token string">'RCTText'</span><span class="token punctuation">,</span>
  <span class="token string">'RCTWebSocket'</span><span class="token punctuation">,</span>
  # Add any other subspecs you want to use <span class="token keyword">in</span> your project
<span class="token punctuation">]</span></div><p>Remember to install all subspecs you need. The <code>&lt;Text&gt;</code> element cannot be used without the <code>RCTText</code> subspec, for example.</p><p>Then install your pods:</p><div class="prism language-javascript">$ pod install</div><h2><a class="anchor" name="create-your-react-native-app"></a>Create Your React Native App <a class="hash-link" href="#create-your-react-native-app">#</a></h2><p>There are two pieces you’ll need to set up:</p><ol><li>The root JavaScript file that will contain your actual React Native app and other components</li><li>Wrapper Objective-C code that will load up your script and create a <code>RCTRootView</code> to display and manage your React Native components</li></ol><p>First, create a directory for your app’s React code and create a simple <code>index.ios.js</code> file:</p><div class="prism language-javascript">$ mkdir ReactComponent
$ touch ReactComponent<span class="token operator">/</span>index<span class="token punctuation">.</span>ios<span class="token punctuation">.</span>js</div><p>Copy &amp; paste following starter code for <code>index.ios.js</code> – it’s a barebones React Native app:</p><div class="prism language-javascript"><span class="token string">'use strict'</span><span class="token punctuation">;</span>

<span class="token keyword">var</span> React <span class="token operator">=</span> <span class="token function">require<span class="token punctuation">(</span></span><span class="token string">'react-native'</span><span class="token punctuation">)</span><span class="token punctuation">;</span>
<span class="token keyword">var</span> <span class="token punctuation">{</span>
  Text<span class="token punctuation">,</span>
  View
<span class="token punctuation">}</span> <span class="token operator">=</span> React<span class="token punctuation">;</span>

<span class="token keyword">var</span> styles <span class="token operator">=</span> React<span class="token punctuation">.</span>StyleSheet<span class="token punctuation">.</span><span class="token function">create<span class="token punctuation">(</span></span><span class="token punctuation">{</span>
  container<span class="token punctuation">:</span> <span class="token punctuation">{</span>
    flex<span class="token punctuation">:</span> <span class="token number">1</span><span class="token punctuation">,</span>
    backgroundColor<span class="token punctuation">:</span> <span class="token string">'red'</span>
  <span class="token punctuation">}</span>
<span class="token punctuation">}</span><span class="token punctuation">)</span><span class="token punctuation">;</span>

class <span class="token class-name">SimpleApp</span> extends <span class="token class-name">React<span class="token punctuation">.</span>Component</span> <span class="token punctuation">{</span>
  <span class="token function">render<span class="token punctuation">(</span></span><span class="token punctuation">)</span> <span class="token punctuation">{</span>
    <span class="token keyword">return</span> <span class="token punctuation">(</span>
      &lt;View style<span class="token operator">=</span><span class="token punctuation">{</span>styles<span class="token punctuation">.</span>container<span class="token punctuation">}</span><span class="token operator">&gt;</span>
        &lt;Text<span class="token operator">&gt;</span>This is a simple application<span class="token punctuation">.</span>&lt;<span class="token operator">/</span>Text<span class="token operator">&gt;</span>
      &lt;<span class="token operator">/</span>View<span class="token operator">&gt;</span>
    <span class="token punctuation">)</span>
  <span class="token punctuation">}</span>
<span class="token punctuation">}</span>

React<span class="token punctuation">.</span>AppRegistry<span class="token punctuation">.</span><span class="token function">registerComponent<span class="token punctuation">(</span></span><span class="token string">'SimpleApp'</span><span class="token punctuation">,</span> <span class="token punctuation">(</span><span class="token punctuation">)</span> <span class="token operator">=</span><span class="token operator">&gt;</span> SimpleApp<span class="token punctuation">)</span><span class="token punctuation">;</span></div><p><code>SimpleApp</code> will be your <strong>module name</strong>, which will be used later on.</p><h2><a class="anchor" name="add-container-view-to-your-app"></a>Add Container View To Your App <a class="hash-link" href="#add-container-view-to-your-app">#</a></h2><p>You should now add a container view for the React Native component. It can be any <code>UIView</code> in your app.</p><p><img src="img/EmbeddedAppContainerViewExample.png" alt="Container view example"></p><p>However, let's subclass <code>UIView</code> for the sake of clean code. Let's name it <code>ReactView</code>. Open up <code>Yourproject.xcworkspace</code> and create a new class <code>ReactView</code> (You can name it whatever you like :)).</p><div class="prism language-javascript"><span class="token comment" spellcheck="true">// ReactView.h
</span>
#import &lt;UIKit<span class="token operator">/</span>UIKit<span class="token punctuation">.</span>h<span class="token operator">&gt;</span>
@interface <span class="token class-name">ReactView</span> <span class="token punctuation">:</span> UIView
@end</div><p>In a view controller that wants to manage this view, go ahead and add an outlet and wire it up:</p><div class="prism language-javascript"><span class="token comment" spellcheck="true">// ViewController.m
</span>
@interface <span class="token class-name">ViewController</span> <span class="token punctuation">(</span><span class="token punctuation">)</span>
@property <span class="token punctuation">(</span>weak<span class="token punctuation">,</span> nonatomic<span class="token punctuation">)</span> IBOutlet ReactView <span class="token operator">*</span>reactView<span class="token punctuation">;</span>
@end</div><p>Here I disabled <strong>AutoLayout</strong> for simplicity. In real production world, you should turn on AutoLayout and setup constraints by yourself.</p><h2><a class="anchor" name="add-rctrootview-to-container-view"></a>Add RCTRootView To Container View <a class="hash-link" href="#add-rctrootview-to-container-view">#</a></h2><p>Ready for the most interesting part? Now we shall create the <code>RCTRootView</code>, where your React Native app lives.</p><p>In <code>ReactView.m</code>, we need to first initiate <code>RCTRootView</code> with the URI of your <code>index.ios.bundle</code>. <code>index.ios.bundle</code> will be created by packager and served by React Native server, which will be discussed later on.</p><div class="prism language-javascript">NSURL <span class="token operator">*</span>jsCodeLocation <span class="token operator">=</span> <span class="token punctuation">[</span>NSURL URLWithString<span class="token punctuation">:</span>@<span class="token string">"http://localhost:8081/index.ios.bundle?platform=ios"</span><span class="token punctuation">]</span><span class="token punctuation">;</span><span class="token comment" spellcheck="true">
// For production use, this `NSURL` could instead point to a pre-bundled file on disk:
</span><span class="token comment" spellcheck="true">//
</span><span class="token comment" spellcheck="true">//   NSURL *jsCodeLocation = [[NSBundle mainBundle] URLForResource:@"main" withExtension:@"jsbundle"];
</span><span class="token comment" spellcheck="true">//
</span><span class="token comment" spellcheck="true">// To generate that file, run the curl command and add the output to your main Xcode build target:
</span><span class="token comment" spellcheck="true">//
</span><span class="token comment" spellcheck="true">//   curl http://localhost:8081/index.ios.bundle -o main.jsbundle
</span>RCTRootView <span class="token operator">*</span>rootView <span class="token operator">=</span> <span class="token punctuation">[</span><span class="token punctuation">[</span>RCTRootView alloc<span class="token punctuation">]</span> initWithBundleURL<span class="token punctuation">:</span>jsCodeLocation
                                                    moduleName<span class="token punctuation">:</span> @<span class="token string">"SimpleApp"</span>
                                             initialProperties<span class="token punctuation">:</span>nil
                                                 launchOptions<span class="token punctuation">:</span>nil<span class="token punctuation">]</span><span class="token punctuation">;</span></div><p>Then add it as a subview of the <code>ReactView</code>.</p><div class="prism language-javascript"><span class="token punctuation">[</span>self addSubview<span class="token punctuation">:</span>rootView<span class="token punctuation">]</span><span class="token punctuation">;</span>
rootView<span class="token punctuation">.</span>frame <span class="token operator">=</span> self<span class="token punctuation">.</span>bounds<span class="token punctuation">;</span></div><h2><a class="anchor" name="start-development-server"></a>Start Development Server <a class="hash-link" href="#start-development-server">#</a></h2><p>In root directory, we need to start React Native development server.</p><div class="prism language-javascript"><span class="token punctuation">(</span>JS_DIR<span class="token operator">=</span>`pwd`<span class="token operator">/</span>ReactComponent<span class="token punctuation">;</span> cd node_modules<span class="token operator">/</span>react<span class="token operator">-</span>native<span class="token punctuation">;</span> npm run start <span class="token operator">--</span> <span class="token operator">--</span>root $JS_DIR<span class="token punctuation">)</span></div><p>This command will start up a React Native development server within our CocoaPods dependency to build our bundled script. The <code>--root</code> option indicates the root of your React Native apps – this will be our <code>ReactComponents</code> directory containing the single <code>index.ios.js</code> file. This running server will package up the <code>index.ios.bundle</code> file accessible via <code>http://localhost:8081/index.ios.bundle</code>.</p><h2><a class="anchor" name="compile-and-run"></a>Compile And Run <a class="hash-link" href="#compile-and-run">#</a></h2><p>Now compile and run your app. You shall now see your React Native app running inside of the <code>ReactView</code>.</p><p><img src="img/EmbeddedAppExample.png" alt="Example"></p><p>Live reload and all of the debugging tools will work from the simulator (make sure that DEBUG=1 is set under Build Settings -&gt; Preprocessor Macros).  You've got a simple React component totally encapsulated behind an Objective-C <code>UIView</code> subclass.</p><h2><a class="anchor" name="conclusion"></a>Conclusion <a class="hash-link" href="#conclusion">#</a></h2><p>So under the hood, when <code>RCTRootView</code> is initialized, it will try to download, parse and run the bundle file from React Native development server. This means all you need to do is to implement your own container view or view controller for the <code>RCTRootView</code> – the <code>RCTRootView</code> ingests your bundled JS and renders your React components. Bravo!</p><p>You can checkout full source code of a sample application <a href="https://github.com/tjwudi/EmbededReactNativeExample" target="_blank">here</a>.</p></div><div class="docs-prevnext"><a class="docs-next" href="communication-ios.html#content">Next →</a></div>